--- a/quad-core/src/layout/Header.module.css
+++ b/quad-core/src/layout/Header.module.css
@@ -21,6 +21,10 @@
   font-weight: 800;
   font-size: 18px;
   letter-spacing: 1px;
+  color: inherit;
+  text-decoration: none;
+  opacity: 0.9
+;
 }
 
 .logo{
